# LitSearch

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: page.js
app/api/relevancesearch/: route.ts
app/api/semanticAuthor/relevanceSearch/: route.ts
app/components/Layouts/: RootLayout.js
app/components/utility/: ButtonPrimary.js  CardLists.js  CardLists.tsx  LayoutBody.js  Loader.js  MagGlassIcon.js  MagGlassIcon.tsx  Modal.js  Sidebar.js  Sidebar.tsx  TextInput.js  TextInput.tsx
app/configuration/: constants.tsx
app/home/: HomePage.tsx  page.tsx
app/models/: article.ts
app/seed/: page.js
app/services/: semanticScholarService.js
backend/: db.py  main.py  models.py  util.py
backend/db/: database.py
backend/models/: models.py
backend/routers/: paper_router.py  papers.py  projects.py  user_router.py  users.py
backend/services/: api.py  events.py  mongo.py
frontend/: .env.local  .env.production  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  helper.tsx  interfaces.ts  layout.tsx  page.tsx  state.ts
frontend/app/components/: HomePage.tsx  PaperDetails.tsx  card.tsx  mock.tsx  search.tsx
frontend/app/context/: AuthProvider.tsx
frontend/app/projects/: createProject.tsx  page.tsx  projectListCard.tsx  projectListCardOld.tsx  projectTeamCard.tsx  teamMembers.tsx
frontend/app/seed/: page.tsx
frontend/app/services/: axiosService.ts
frontend/app/states/: genericState.ts  projectsState.ts  queriesState.ts  state.ts
store/: index.js
(+43 files in other folders)
